fix password matches and filter JWT